--- a/PORTFOLIO/portfolio.css
+++ b/PORTFOLIO/portfolio.css
@@ -82,9 +82,36 @@
     background-size: cover;
 }
 
+
+/* Доработать
 .backround-gray {
     width: 100%;
     height: 300px;
     background-color: #e5e5e5;
+}
+*/
 
+.block-Text {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.block-Text h1 {
+    font-family: sans-serif;
+    font-size: 96px;
+    font-weight: 300px;
+    width: 10%;
+    margin-left: 500px;
+    line-height: 1.1;
+
+}
+
+.block-Text p {
+    font-family: sans-serif;
+    font-size: 19px;
+    text-align: left;
+    width: 20%;
+    margin-left: 200px;
+    margin-top: 100px;
 }
