--- a/Best Beauty Treatments/style.css
+++ b/Best Beauty Treatments/style.css
@@ -47,3 +47,22 @@
     text-align: center;
     margin-left: 430px;
 }
+
+.window-div {
+    background-image: url('imgs/bacround.png');
+    width: 100%;
+    height: 700px;
+    background-position: 50%, 50%;
+    background-size: cover;
+    object-fit: cover;
+}
+
+.img-window {
+    background-image: url('imgs/2.jpg');
+    width: 500px;
+    height: 500px;
+}
+
+.img-windowTwo { 
+    
+}
