--- a/Happy Training/style.css
+++ b/Happy Training/style.css
@@ -277,3 +277,62 @@
 }
 
 /* СТРАНИЦА 6*/
+
+.block-all { 
+    background-color: #e5e5e5;
+    width: 100%;
+    height: 700px;
+    padding: 0.1px;
+    padding-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.all-one {
+    background-color: #3c9f62;
+    width: 350px;
+    height: 500px;
+    border-radius: 20px;
+}
+
+.all-one h1 {
+    font-family: sans-serif;
+    font-size: 45px;
+    color: white;
+    text-align: left;
+    padding-top: 100px;
+    margin: 30px;
+}
+
+.all-two {
+    background-color: white;
+    width: 400px;
+    height: 500px;
+    border-radius: 20px;
+    
+}
+
+.all-two p {
+    font-family: sans-serif;
+    font-size: 25px;
+    line-height: 30px;
+    padding: 30px;
+    margin: 30px;
+}
+
+.all-twee {
+    background-color: #f59d32;
+    width: 350px;
+    height: 500px;
+    border-radius: 20px;
+}
+
+.all-twee p {
+    color: white;
+    font-family: sans-serif;
+    font-size: 20px;
+    line-height: 25px;
+    margin: 20px;
+    padding: 20px;
+}
