--- a/Happy Training/style.css
+++ b/Happy Training/style.css
@@ -12,6 +12,8 @@
     background-size: cover;
     width: 800px;
     height: 700px;
+    min-width: 700px;
+    min-height: 600px;
 }
 
 .main-text {
@@ -202,14 +204,13 @@
 
 .window-img {
     width: 400px;
-    height: 500px;
+    height: 450px;
     border-radius: 20px;
     background-color: white;
 }
 
 .window-img img{ 
     width: 300px;
-    height: 300px;
     border-radius: 20px;
     padding: 10px;
     margin: 30px;
@@ -335,4 +336,11 @@
     line-height: 25px;
     margin: 20px;
     padding: 20px;
+}
+
+.div-img { 
+    width: 100%;
+    height: 300px;
+    text-align: center;
+    vertical-align: middle;
 }
