--- a/technology/technology.css
+++ b/technology/technology.css
@@ -466,16 +466,19 @@
 }
 
 .finish-png {
-    margin-top: -100px;
-    background: none;   
-    height: 700px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    padding: 10px;
+    margin: 10px;
+    width: 100%;
+    height: 300px;
 }
 
 .finish2-png { 
-    background: #d9d9d9;
+    
+}
+
+.hello-img { 
+    display: flex;
+    justify-content: space-around;
 }
 
 .show-png {
@@ -486,6 +489,7 @@
     height: 230px;
     display: flex;
     flex-wrap: wrap;
+    
     justify-content: center;
     justify-items: center;
     align-items: center;
